# python-sf

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  OLDpyproject.toml  README.md  main.py  pyproject.toml  pytest.ini
src/: core.rs  lib.rs
src/python_sf/: __init__.py  snowflake_connection.py  snowflake_session.py
src/python_sf/chess/: __init__.py  download_pgn_files.py  preprocess_pgn_file.py
src/python_sf/test/: test_avro_uploader.py  test_chess_download_pgn.py  test_decompress_pgn_file.py  test_preprocess_pgn.py  test_snowflake_session.py
src/python_sf/util/: __init__.py  avro_uploader.py
