[project]
name = "python-sf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.1",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "pyspark>=3.5.5",
    "python-dotenv>=1.0.1",
    "snowflake>=1.0.5",
    "snowflake-snowpark-python>=1.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
