[project]
name = "python-sf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.1",
    "fastavro>=1.10.0",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pyarrow>=18.0.0,<19.0.0",
    "pydantic>=2.10.6",
    "pyspark>=3.5.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "snowflake>=1.0.5",
    "snowflake-snowpark-python>=1.29.0",
    "tqdm>=4.67.1",
    "zstandard>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
